--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/pablosilvab/redis#readme",
   "dependencies": {
+    "axios": "^0.27.2",
     "express": "^4.18.1",
     "nodemon": "^2.0.16",
     "redis": "^4.1.0",
