--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
   "dependencies": {
     "axios": "^0.27.2",
     "express": "^4.18.1",
+    "ioredis": "^5.0.6",
     "nodemon": "^2.0.16",
-    "redis": "^4.1.0",
     "response-time": "^2.3.2"
   }
 }
